--- a/views/administrator/viewUser.ejs
+++ b/views/administrator/viewUser.ejs
@@ -13,6 +13,13 @@
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>User Name</th>
+                <th>Action</th>
+            </tr>
+            <tr>
+                <td>data First Name</td>
+                <td>data Last Name</td>
+                <td>data User Name</td>
+                <td>Edit | Delete</td>
             </tr>
         </table>
     </form>
