finish courier options

--- a/views/orders/orders.ejs
+++ b/views/orders/orders.ejs
@@ -28,7 +28,7 @@
             </div>
             <div class = "bottom_menu">
             <h3>Total : Rp <%= totalPrice %> </h3>
-            <a href="/users/payment">check out</a>
+            <a href="/users/payment/shipping">check out</a>
             </div>
 
 
