--- a/views/orders/orders.ejs
+++ b/views/orders/orders.ejs
@@ -4,9 +4,10 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/styles/style.css" />
     </head>
     <body>
+    <%- include('../partials/header-login-from-order.ejs')  %>
         <div class= "wrapper">
             <div class ="content">
             <% let totalPrice = 0 %> 
@@ -27,10 +28,20 @@
             <% }) %>
             </div>
             <div class = "bottom_menu">
-            <h3>Total : Rp <%= totalPrice %> </h3>
-            <a href="/users/payment/shipping">check out</a>
-            </div>
+            
+            <div id="cart-options">
+                <% if (orders.length !== 0) { %>
+                    <h3>Total : Rp <%= totalPrice %> </h3>
+                    <div class="checkout-link">
+                    <a href="/users/payment/shipping" >check out</a>
+                    </div>
+                <% }  else { %>
+                    <h3>your cart is empty</h3>
+                    <a href="/products">shop now</a>
 
+                <% } %> 
+                </div>
+            </div>
 
         </div>
         
