--- a/views/payments/courier-options.ejs
+++ b/views/payments/courier-options.ejs
@@ -4,13 +4,14 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/styles/style.css" />
     </head>
     <body>
+    <%- include('../partials/header-login.ejs')  %>
         <div class="wrapper">
             <div class="content">
                 <h3><%= courier.name %> options: </h3>
-                <form>
+                <form method="post" action="/users/payment/pay">
                     
                     <% courier.costs.forEach(service => { %>
                         <input type="radio" name="shippingPrice" value="<%=service.cost[0].value%>">
@@ -19,7 +20,8 @@
                         estimated delivery: <%= service.cost[0].etd %>
                         <br><br>
                     <% }) %>
-                
+                    <input type="hidden" name= "CityId" value="<%=prevBody.CityId%>">
+                    <input type="hidden" name= "street_address" value="<%=prevBody.street_address%>">
                     <button type="submit">choose option</button>
                 
                 </form>
