--- a/views/payments/shipping-address.ejs
+++ b/views/payments/shipping-address.ejs
@@ -4,9 +4,10 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/styles/style.css" />
     </head>
     <body>
+    <%- include('../partials/header-login.ejs')  %>
     <div class="wrapper">
         <div class="content">
             <form method="post" action="/users/payment/shipping/options">
