--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -4,19 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="/styles/style.css" />
     <title>Login</title>
 </head>
 <body>
-  <form method="POST">
-    Username<br>
-    <input type="text" name="username">
-    <br>
-    <br>
-    Password<br>
-    <input type="password" name="password">
-    <br>
-    <input type="submit" value="Login">
-    <input type="submit" value="Cancel">
-  </form>
+  <div class="wrapper">
+    <div class = "content">
+    
+      <form method="POST">
+          Username<br>
+          <input type="text" name="username">
+          <br>
+          <br>
+          Password<br>
+          <input type="password" name="password">
+          <br>
+          <input type="submit" value="Login">
+          <a href="/register">register</a>
+      </form><br>
+    
+    
+    </div>
+  </div>
+
+
+  
 </body>
 </html>
