--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="/styles/style.css" />
     <title>Home</title>
 </head>
 <body>
-    <a href="/login">login</a>||<a href="/register">register</a>
+    <%- include('./partials/header-not-login.ejs')  %>
+
+    <div class="wrapper">
+         <div class="index">
+             <a href="/login">login</a>||<a href="/register">register</a>
+         </div>
+    </div>
+   
 </body>
 </html>
