--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -8,6 +8,7 @@
     <title>Login</title>
 </head>
 <body>
+<%- include('../partials/header-not-login.ejs')  %> 
   <div class="wrapper">
     <div class = "content">
     
