--- a/views/orders/history.ejs
+++ b/views/orders/history.ejs
@@ -4,7 +4,7 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/styles/style.css" />
     </head>
     <body>
     <%- include('../partials/header-login-from-order.ejs')  %>
@@ -18,7 +18,7 @@
                 <div class = "item-menu">
                     name: <%= product.name %><br>
                     price: Rp <%= product.price %><br>
-                    date of purchase: Rp <%= product.updatedAt %> 
+                    date of purchase: <%= product.updatedAt %> 
                 </div>
             </div>
         <% }) %>
