--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -4,27 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="/styles/style.css" />
     <title>Register New User</title>
 </head>
 <body>
-  <form method="POST">
-    First Name<br>
-    <input type="text" name="first_name">
-    <br>
-    <br>
-    Last Name<br>
-    <input type="text" name="last_name">
-    <br>
-    <br>      
-    Username<br>
-    <input type="text" name="username">
-    <br>
-    <br>
-    Password<br>
-    <input type="text" name="password">
-    <br>
-    <input type="submit" value="Save">
-    <input type="submit" value="Cancel">
-  </form>
+<%- include('../partials/header-not-login.ejs')  %> 
+
+  <div class="wrapper">
+    <div class="content">
+      <form method="POST">
+        First Name<br>
+        <input type="text" name="first_name">
+        <br>
+        <br>
+        Last Name<br>
+        <input type="text" name="last_name">
+        <br>
+        <br>      
+        Username<br>
+        <input type="text" name="username">
+        <br>
+        <br>
+        Password<br>
+        <input type="text" name="password">
+        <br>
+        <input type="submit" value="Save"><br>
+        <h5>has an account ?</h5>
+        <a href="/login">login</a>
+    </form>
+    </div>
+  </div>
+
+
+
+
+  
 </body>
 </html>
